2004-03-02  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/x11.trm [TERM_HELP]: Explain colour control via command
	line options more clearly, including the -xrm for colors other
	than the background.

	* docs/gnuplot.doc (random, palette): Fixed entries showing up as
	sub-topics in the wrong places of gnuplot.gih.

2004-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc term/x11.trm: Fix entries appearing in 'help
	help'.

2004-02-27  Ethan Merritt  <merritt@u.washington.edu>
	
	* term/mif.trm: Revise #ifdef so that it compiles if you select
	configure --disable-filledboxes

	* src/gplt_x11.c: Add #ifdef so that it compiles if you select
	configure --disable-pm3d

2004-02-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg config/config.mgw config/config.os2: Shape
	these config files to the form of config.hin generated by
	./configure. This will more easily facilitate to synchronize
	particular #(un)define options added to the ./configure procedure
	in future.

2004-02-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Fix SF bug [ 905691 ] "save" does not save correct arrow heads.

	* src/term_api.h (t_arrow_head): New enum type to provide manifest
	constants for arrow head choices.
	(arrow_head_names): Added declaration of new global in term.c.
	(arrow_style_type): Change type of member "head" from int to new
	enum.

	* src/term.c: Define constant strings for arrow head placement
	options.

	* src/save.c (save_set_all): Use new string constant to correctly
	output head placement options.

2004-02-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc term/x11.trm: Added missing labels for hypertext
	references.

2004-02-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.amg config/config.cyg config/config.mgw
	config/config.os2: Changed GP_FIT_ERRVARS from #undef to #define
	(complies with the default value of ./configure).
